<?xml version="1.0" encoding = "utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/table"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:shrinkColumns="*"
    android:stretchColumns="*">

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <EditText
                android:id="@+id/inputID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/inputID">

                <requestFocus/>
            </EditText>


            <EditText
                android:id="@+id/inputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/inputName">
            </EditText>


            <EditText
                android:id="@+id/inputContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/inputNumber">
            </EditText>

        </LinearLayout>

    </TableRow>


    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/addContactButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:onClick="submitContact"
            android:text="@string/addContact" />
        <Button
            android:id="@+id/deleteContactButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:onClick="deleteContact"
            android:text="@string/deleteContact" />
    </TableRow>


    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/updateContactButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:onClick="updateContact"
            android:text="@string/updateContact" />
        <Button
            android:id="@+id/selectContactButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:onClick="selectContact"
            android:text="@string/selectContact" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="6"
            android:gravity="center"
            android:text="@string/ContactsInfo"
            android:textSize="28sp"
            android:textStyle="bold">
        </TextView>
    </TableRow>


    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >


        <TextView
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_weight="0.3"
            android:text="@string/contactID"
            android:textStyle="bold"
            android:typeface="serif">
        </TextView>


        <TextView
            android:gravity="center"
            android:text="@string/contactName"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:textStyle="bold"
            android:typeface="serif">
        </TextView>


        <TextView
            android:gravity="center"
            android:text="@string/contactNumber"
            android:layout_width="0dp"
            android:layout_weight="0.4"
            android:textStyle="bold"
            android:typeface="serif">
        </TextView>
    </TableRow>
</TableLayout>